Fix jappalyzer * add metrics * never spent more than 5 seconds analyzing a page * compile regexes at startup